fix: business section design change

--- a/src/index.html
+++ b/src/index.html
@@ -135,7 +135,7 @@
             <div class="row">
                 <div class="col-12 px-0">
                     <video autoplay playsinline muted defaultMuted loop class="video">
-                        <source src="./assets//images/hero_video.mp4" type="video/mp4">
+                        <source src="./assets//images/hero_video_1.mp4" type="video/mp4">
 
                         <!-- <source src="movie.ogg" type="video/ogg"> -->
 
@@ -154,7 +154,7 @@
                         <div class="hero_content__mobile">
                             <div class="d-flex justify-content-center align-items-center">
                                 <img src="./assets//images/logo_large_1.svg" class="hero_logo__desktop" alt="">
-                                <img src="./assets//images/hero_logo__mobile.svg" class="hero_logo__mobile" alt="">
+                                <img src="./assets//images/Logo Monochrome.svg" class="hero_logo__mobile" alt="">
 
                             </div>
                             <p class="text-center hero_title">DRIVING CONFIDENCE, DELIVERING EXCELLENCE</p>
@@ -294,62 +294,111 @@
     <section id="business">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12 px-0">
-                    <p class="business_title">Business ethics and transparency</p>
+                <div class="col-sm-12 col-md-12 col-lg-6">
+                    <p class="business_title">Business ethics and <br>
+                        transparency</p>
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-6 pe-5">
+                    <p class="business_subtitle mt-3 mt-lg-0">We understand MRO services can be costly, but we have got
+                        you covered.
+                        We operate a
+                        cost-effective model that doesn’t
+                        compromise on quality. With our lean approach, we minimize waste and optimize resources -
+                        savings we pass directly to
+                        you!</p>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-sm-12 col-md-12 col-lg-3 mt-3">
+
+                    <div class="business_wrapper">
+                        <p class="business_number">01</p>
+                        <div class="business_item__wrapper">
+                            <p class="business_item__title">Professional Principles</p>
+                            <p class="business_item__subtitle">Agility, Reliability & Precision</p>
+                            <p class="business_item__description">At Horizon Mechanics, we uphold the
+                                highest professional principles in every aspect of our operations. We are committed to
+                                excellence, integrity, and
+                                reliability, ensuring that our customers receive nothing but the best products and
+                                services at all times.</p>
+                        </div>
+                    </div>
+                    <div class="business_wrapper">
+                        <p class="business_number">02</p>
+                        <div class="business_item__wrapper">
+                            <p class="business_item__title">Customer-Centric Approach</p>
+                            <p class="business_item__subtitle">Your Needs, Our Priority</p>
+                            <p class="business_item__description">Our customers are at the heart of
+                                everything we do. Our dedicated team is always ready to assist you with bespoke
+                                solutions and swift responses to your
+                                demands in 24/7 mode.</p>
+                        </div>
+                    </div>
+                    <div class="business_wrapper">
+                        <p class="business_number">03</p>
+                        <div class="business_item__wrapper">
+                            <p class="business_item__title">Quality Assurance</p>
+                            <p class="business_item__subtitle">Dedication to Excellence</p>
+                            <p class="business_item__description">Quality assurance is the cornerstone of our
+                                operations. We adhere to stringent quality control measures to ensure that
+                                every aviation spare part meets the highest standards of excellence, reliability,
+                                and safety.</p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-9 pe-0">
+                    <img src="./assets/images/Business.png" class="business_img" alt="">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12 px-0">
-                    <div class="business_wrapper">
-                        <p class="business_number">01</p>
+                <div class="col-sm-12 col-md-12 col-lg-4">
+                    <div class="business_wrapper border-none">
+                        <p class="business_number">04</p>
                         <div class="business_item__wrapper">
                             <p class="business_item__title">Transparency Statement</p>
-                            <p class="business_item__description">Transparency is at the core of our operations. We
-                                prioritize trust and openness with our clients, partners, and stakeholders.</p>
+                            <p class="business_item__subtitle">Always Open Communication</p>
+                            <p class="business_item__description">Transparency is fundamental to our
+                                business philosophy. We believe in open communication, honesty, and truthfulness in all
+                                our dealings. From pricing and
+                                product sourcing to service delivery and customer support, we are committed toproviding
+                                complete transparency every step
+                                of the way.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 px-0">
-                    <div class="business_wrapper">
-                        <p class="business_number">01</p>
+                <div class="col-sm-12 col-md-12 col-lg-4">
+                    <div class="business_wrapper border-none">
+                        <p class="business_number">05</p>
                         <div class="business_item__wrapper">
-                            <p class="business_item__title">Transparency Statement</p>
-                            <p class="business_item__description">Transparency is at the core of our operations. We
-                                prioritize trust and openness with our clients, partners, and stakeholders.</p>
+                            <p class="business_item__title">Compliance and Legal <br> Adherence</p>
+                            <p class="business_item__subtitle">Regulatory Standards Focus</p>
+                            <p class="business_item__description">At Horizon Mechanics, we
+                                adhere to strict compliance standards and uphold all relevant regulations and legal
+                                requirements. Our comprehensive
+                                compliance program ensures that our operations, processes, and transactions meet the
+                                highest standards of ethics
+                                and legality.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 px-0">
-                    <div class="business_wrapper">
-                        <p class="business_number">01</p>
+                <div class="col-sm-12 col-md-12 col-lg-4">
+                    <div class="business_wrapper border-none">
+                        <p class="business_number">06</p>
                         <div class="business_item__wrapper">
-                            <p class="business_item__title">Transparency Statement</p>
-                            <p class="business_item__description">Transparency is at the core of our operations. We
-                                prioritize trust and openness with our clients, partners, and stakeholders.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 px-0">
-                    <div class="business_wrapper">
-                        <p class="business_number">01</p>
-                        <div class="business_item__wrapper">
-                            <p class="business_item__title">Transparency Statement</p>
-                            <p class="business_item__description">Transparency is at the core of our operations. We
-                                prioritize trust and openness with our clients, partners, and stakeholders.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 px-0">
-                    <div class="business_wrapper">
-                        <p class="business_number">01</p>
-                        <div class="business_item__wrapper">
-                            <p class="business_item__title">Transparency Statement</p>
-                            <p class="business_item__description">Transparency is at the core of our operations. We
-                                prioritize trust and openness with our clients, partners, and stakeholders.</p>
+                            <p class="business_item__title">Global Reach and <br> Partnerships</p>
+                            <p class="business_item__subtitle">Connecting Aviation Worldwide</p>
+                            <p class="business_item__description">With a global network of international partners and
+                                suppliers, we have the capability to serve clients around the world
+                                with efficiency and reliability. Our extensive reach enables us to source the highest
+                                quality spare parts and
+                                deliver exceptional services wherever our customers operate. We bring the world of
+                                aviation closer to you.</p>
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </section>
     <section id="values" class="section w-100">
@@ -375,65 +424,65 @@
                 </div>
                 <div class="col-sm-12 col-lg-4 col-md-6 px-0 px-sm-1">
                     <div class="value_wrapper">
-                        <img src="./assets/images/value_icon.svg" class="value_icon" alt="">
+                        <img src="./assets/images/value_icon_2.svg" class="value_icon" alt="">
                         <div class="value_item__wrapper">
                             <p class="value_item__title">
-                                Market agility
+                                Flexibility
                             </p>
                             <p class="value_item__description">
-                                Swift adaptation to industry changes and client needs.
+                                Tailoring solutions to meet diverse customer requirements.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-4 col-md-6 px-0 px-sm-1">
                     <div class="value_wrapper">
-                        <img src="./assets/images/value_icon.svg" class="value_icon" alt="">
+                        <img src="./assets/images/value_icon_3.svg" class="value_icon" alt="">
                         <div class="value_item__wrapper">
                             <p class="value_item__title">
-                                Market agility
+                                High Reliability
                             </p>
                             <p class="value_item__description">
-                                Swift adaptation to industry changes and client needs.
+                                Consistently dependable in quality and service.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-4 col-md-6 px-0 px-sm-1">
                     <div class="value_wrapper">
-                        <img src="./assets/images/value_icon.svg" class="value_icon" alt="">
+                        <img src="./assets/images/value_icon_4.svg" class="value_icon" alt="">
                         <div class="value_item__wrapper">
                             <p class="value_item__title">
-                                Market agility
+                                Partnerships
                             </p>
                             <p class="value_item__description">
-                                Swift adaptation to industry changes and client needs.
+                                Building strong, collaborative relationships.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-4 col-md-6 px-0 px-sm-1">
                     <div class="value_wrapper">
-                        <img src="./assets/images/value_icon.svg" class="value_icon" alt="">
+                        <img src="./assets/images/value_icon_5.svg" class="value_icon" alt="">
                         <div class="value_item__wrapper">
                             <p class="value_item__title">
-                                Market agility
+                                Customer synergy
                             </p>
                             <p class="value_item__description">
-                                Swift adaptation to industry changes and client needs.
+                                Aligning with client desires for mutual benefit.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-4 col-md-6 px-0 px-sm-1">
                     <div class="value_wrapper">
-                        <img src="./assets/images/value_icon.svg" class="value_icon" alt="">
+                        <img src="./assets/images/value_icon_6.svg" class="value_icon" alt="">
                         <div class="value_item__wrapper">
                             <p class="value_item__title">
-                                Market agility
+                                Communication
                             </p>
                             <p class="value_item__description">
-                                Swift adaptation to industry changes and client needs.
+                                Ensuring clear, timely, and effective dialogue.
                             </p>
                         </div>
                     </div>
@@ -690,7 +739,8 @@
                 0: {
                     spaceBetween: 14,
                     slidesPerView: "7",
-                    slidesOffsetAfter: 0
+                    slidesOffsetAfter: 0,
+
                 },
                 1200: {
                     spaceBetween: 24,
