fix: homepage responsive

--- a/src/index.html
+++ b/src/index.html
@@ -547,9 +547,9 @@
                         <div class="certificate_item__wrapper">
                             <p class="certificate_wrapper__title">Our certificates</p>
                             <div class="certificate_wrapper ps-2 ps-sm-0">
-                                <img src="./assets/images/certificate_img.svg" clas alt="">
-                                <img src="./assets/images/certificate_img.svg" clas alt=""><img
-                                    src="./assets/images/certificate_img.svg" clas alt="">
+                                <img src="./assets/images/certificate_img.svg" class="certificate_img" alt="">
+                                <img src="./assets/images/certificate_img.svg" class="certificate_img" alt=""><img
+                                    src="./assets/images/certificate_img.svg" class="certificate_img" alt="">
                             </div>
                         </div>
                     </div>
