fix: homepage responsive

--- a/src/index.html
+++ b/src/index.html
@@ -308,7 +308,7 @@
                         you!</p>
                 </div>
             </div>
-            <div class="row mt-5">
+            <div class="row mt-sm-5">
                 <div class="col-sm-12 col-md-12 col-lg-3 mt-3">
 
                     <div class="business_wrapper">
