fix: homepage design changed

--- a/src/index.html
+++ b/src/index.html
@@ -159,10 +159,8 @@
                             </div>
                             <p class="text-center hero_title">DRIVING CONFIDENCE, DELIVERING EXCELLENCE</p>
                             <div class="d-flex justify-content-center align-items-center">
-                                <button class="d-flex justify-content-center align-items-center hero_btn">Discover How
-                                    We
-                                    Can Assist
-                                    You!</button>
+                                <button class="d-flex justify-content-center align-items-center hero_btn">We Bring
+                                    Aviation Closer To You</button>
                             </div>
                         </div>
                     </div>
@@ -200,23 +198,26 @@
 
             </div>
             <div class="row">
-                <div class="col-12 col-md-6 about_description">
-                    <p class="about_description">Horizon Mechanics LLC-FZ emerges as a trusted partner in the aviation
-                        supply chain, rooted in the strategic hub of
-                        MeydanFree Zone, Dubai, UAE.</p><br>
-                    <p class="about_description">Our expertise covers the sales of spare parts, AOG, exchange, repair
-                        and maintenance, Diagnostics and sourcing services,
+                <div class="col-12 about_description">
+                    <p class="about_description">
+                        Horizon Mechanics LLC-FZ emerges as a trusted partner in the aviation supply chain, rooted in
+                        the
+                        strategic hub of MeydanFree Zone, Dubai, UAE.
+                    </p><br>
+                    <p class="about_description">
+                        Our expertise covers the sales of spare parts, AOG, exchange, repair and maintenance,
+                        Diagnostics and sourcing services,
                         aligning with our mission to connect and establish enduring relationships with leading aviation
                         OEM manufacturers and
-                        suppliers worldwide.</p>
-                </div>
-                <div class="col-12 col-md-6 about_description">
+                        suppliers worldwide.
+                    </p> <br>
                     <p class="about_description">
+
                         Our service initiatives prioritize consistent and dynamic interaction, aiming to fully
                         comprehend our clients' unique
-                        needs. Through mutual involvement, we pursue continuous improvement to reach common goals and
-                        objectives.
-                    </p><br>
+                        needs. Through mutual involvement, we pursue continuous improvement to reach common
+                        goals and objectives.
+                    </p> <br>
                     <p class="about_description">
                         Horizon Mechanics LLC-FZ is persistent in its commitment to quality and service, preferring a
                         personalized approach to
@@ -227,11 +228,12 @@
                         service offering and industry presence.
                     </p>
                 </div>
+
             </div>
             <div class="row w-100">
-                <div class="col-12 video_about">
-                    <img style="width: 100%; margin-top: 40px; min-height: 330px"
-                        src="./assets/images/Rectangle 3844.png" alt="">
+                <div class="col-12 pe-0 ps-4 video_about">
+                    <img style="width: 100%; margin-top: 40px; min-height: 330px" src="./assets/images/image (1).png"
+                        alt="">
                 </div>
             </div>
         </div>
@@ -260,31 +262,30 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3 px-0 px-sm-1">
                     <div class="service_wrapper">
-                        <p class="service_name">Spare Parts</p>
-                        <img src="./assets/images/services.svg" class="service_img" alt="">
-                        <p class="service_description">Horizon Mechanics has seven wheel and brake facilities with the
-                            capability to service a high volume of wheels and
-                            brakes.</p>
+                        <p class="service_name">Exchanges</p>
+                        <img src="./assets/images/exchange_img.svg" class="service_img" alt="">
+                        <p class="service_description">Our flexible exchange and loan services enable airlines to obtain
+                            high-quality, immediate replacement of expensive parts
+                            while avoiding</p>
                         <button class="service_btn">Learn More</button>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3 px-0 px-sm-1">
                     <div class="service_wrapper">
-                        <p class="service_name">Spare Parts</p>
-                        <img src="./assets/images/services.svg" class="service_img" alt="">
-                        <p class="service_description">Horizon Mechanics has seven wheel and brake facilities with the
-                            capability to service a high volume of wheels and
-                            brakes.</p>
+                        <p class="service_name">AOG</p>
+                        <img src="./assets/images/aog_img.svg" class="service_img" alt="">
+                        <p class="service_description">We solve our customers challenges by providing 24/7 AOG (Aircraft
+                            on
+                            Ground) services, which ensure prompt resolution of issues through.</p>
                         <button class="service_btn">Learn More</button>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3 px-0 px-sm-1">
                     <div class="service_wrapper">
-                        <p class="service_name">Spare Parts</p>
-                        <img src="./assets/images/services.svg" class="service_img" alt="">
-                        <p class="service_description">Horizon Mechanics has seven wheel and brake facilities with the
-                            capability to service a high volume of wheels and
-                            brakes.</p>
+                        <p class="service_name">Repair management</p>
+                        <img src="./assets/images/repair_img.svg" class="service_img" alt="">
+                        <p class="service_description">Horizon Mechanics offers comprehensive aircraft repair and
+                            maintenance services. Our competencies in highquality repair.</p>
                         <button class="service_btn">Learn More</button>
                     </div>
                 </div>
@@ -298,7 +299,7 @@
                     <p class="business_title">Business ethics and <br>
                         transparency</p>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-6 pe-5">
+                <div class="col-sm-12 col-md-12 col-lg-6">
                     <p class="business_subtitle mt-3 mt-lg-0">We understand MRO services can be costly, but we have got
                         you covered.
                         We operate a
@@ -309,7 +310,7 @@
                 </div>
             </div>
             <div class="row mt-sm-5">
-                <div class="col-sm-12 col-md-12 col-lg-3 mt-3">
+                <div class="col-sm-12 col-md-12 col-lg-3 mt-3 px-0 px-sm-1">
 
                     <div class="business_wrapper">
                         <p class="business_number">01</p>
@@ -351,9 +352,9 @@
                     <img src="./assets/images/Business.png" class="business_img" alt="">
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-4">
-                    <div class="business_wrapper border-none">
+            <div class="row mt-0 mt-sm-4">
+                <div class="col-sm-12 col-md-12 col-lg-4 px-0 px-sm-1">
+                    <div class="business_wrapper">
                         <p class="business_number">04</p>
                         <div class="business_item__wrapper">
                             <p class="business_item__title">Transparency Statement</p>
@@ -367,8 +368,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-4">
-                    <div class="business_wrapper border-none">
+                <div class="col-sm-12 col-md-12 col-lg-4 px-0 px-sm-1">
+                    <div class="business_wrapper">
                         <p class="business_number">05</p>
                         <div class="business_item__wrapper">
                             <p class="business_item__title">Compliance and Legal <br> Adherence</p>
@@ -382,7 +383,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-4">
+                <div class="col-sm-12 col-md-12 col-lg-4 px-0 px-sm-1">
                     <div class="business_wrapper border-none">
                         <p class="business_number">06</p>
                         <div class="business_item__wrapper">
@@ -548,8 +549,8 @@
                             <p class="certificate_wrapper__title">Our certificates</p>
                             <div class="certificate_wrapper ps-2 ps-sm-0">
                                 <img src="./assets/images/certificate_img.svg" class="certificate_img" alt="">
-                                <img src="./assets/images/certificate_img.svg" class="certificate_img" alt=""><img
-                                    src="./assets/images/certificate_img.svg" class="certificate_img" alt="">
+                                <img src="./assets/images/certificate-2.svg" class="certificate_img" alt=""><img
+                                    src="./assets/images/certificate-3.svg" class="certificate_img" alt="">
                             </div>
                         </div>
                     </div>
