fix: footer logo mobile justify center

--- a/src/index.html
+++ b/src/index.html
@@ -636,7 +636,9 @@
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-12 col-sm-12 footer_item footer_logo__mobile">
-                            <img src="./assets/images/footer_logo.svg" class="footer_logo" alt="">
+                            <div style="display: flex; justify-content: center;">
+                                <img src="./assets/images/footer_logo.svg" class="footer_logo" alt="">
+                            </div>
                             <p style="color: #1E1C20;
                                                                         font-size: 20px;
                                                                         font-family: Figtree;
