--- a/src/certificates.html
+++ b/src/certificates.html
@@ -179,7 +179,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 px-0">
-                    <img src="./assets/images/Certificate.png" class="certificate-bg-img" alt="">
+                    <img src="./assets/images/Bg.svg" class="certificate-bg-img" alt="">
                 </div>
             </div>
         </div>
