--- a/src/contact.html
+++ b/src/contact.html
@@ -264,16 +264,20 @@
                 </div>
                 <div class="col-6 col-lg-3">
                     <div class="support_item__wrapper">
-                        <img src="./assets/images/mail.svg" alt="">
-                        <p class="support_item__title">Our email address</p>
-                        <p class="support_item__subtitle">sales@horizonmechanics.com</p>
+                        <img src="./assets/images/phone.svg" alt="">
+                        <p class="support_item__title">Our number</p>
+                        <p class="support_item__subtitle">(+971)45-613-6000</p>
+                        <p class="support_item__subtitle">(+994)51-233-00-31</p>
                     </div>
                 </div>
                 <div class="col-6 col-lg-3">
                     <div class="support_item__wrapper">
-                        <img src="./assets/images/mail.svg" alt="">
-                        <p class="support_item__title">Our email address</p>
-                        <p class="support_item__subtitle">sales@horizonmechanics.com</p>
+                        <img src="./assets/images/location_on.svg" alt="">
+                        <p class="support_item__title">Our address</p>
+                        <p class="support_item__subtitle">Business Center 1, M Floor,</p>
+                        <p class="support_item__subtitle">Meydan FZ, Nad Al Sheba, P.O. Box 9305, Dubai</p>
+                        <p class="support_item__subtitle">United Arab Emirates</p>
+
                     </div>
                 </div>
             </div>
@@ -281,104 +285,141 @@
     </section>
     <section id="footer" class="section w-100">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-12 footer_item footer_logo__desktop">
-                    <img src="./assets/images/footer_logo.svg" class="footer_logo" alt="">
-                    <p style="color: #1E1C20;
-                        font-size: 20px;
-                        font-family: Figtree;
-                        font-weight: 500;
-                        line-height: 32px;">We keep you up to date</p>
-                    <div class="email_input__wrapper">
-                        <input type="text" placeholder="Your email address" class="email_input">
-                        <img src="./assets/images/email_icon.svg" class="email_icon" alt="">
-                    </div>
-                    <p class="copyrights">© 2024 Horizons Mechanic. All right reserved</p>
-                    <div class="social_meadia__wrapper">
-                        <p style="color: #262626;
-                            font-size: 16px;
-                            font-family: Roboto;
-                            font-weight: 500;
-                            line-height: 24px;">Stay connected</p>
-                        <div class="social_media__icons">
-                            <img src="./assets/images/linkedin_icon.svg" alt="">
-                            <img src="./assets/images/mail_icon.svg" alt="">
+            <div class="row justify-content-center">
+                <div class="col-12 col-sm-12 col-md-4 footer_logo__desktop">
+                    <div class="row">
+
+                        <div class="col-12 pe-5 footer_item footer_logo__desktop">
+                            <img src="./assets/images/footer_logo.svg" class="footer_logo" alt="">
+                            <p style="color: #1E1C20;
+                                                    font-size: 20px;
+                                                    font-family: Figtree;
+                                                    font-weight: 500;
+                                                    line-height: 32px;">We keep you up to date</p>
+                            <div class="email_input__wrapper">
+                                <input type="text" placeholder="Your email address" class="email_input">
+                                <img src="./assets/images/email_icon.svg" class="email_icon" alt="">
+                            </div>
+                            <p class="copyrights">© 2024 Horizons Mechanic. All right reserved</p>
+                            <div class="social_meadia__wrapper">
+                                <p style="color: #262626;
+                                                        font-size: 16px;
+                                                        font-family: Roboto;
+                                                        font-weight: 500;
+                                                        line-height: 24px;">Stay connected</p>
+                                <div class="social_media__icons">
+                                    <img src="./assets/images/linkedin_icon.svg" alt="">
+                                    <img src="./assets/images/mail_icon.svg" alt="">
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 footer_item">
-                    <p class="footer_header">
-                        Quick links
-                    </p>
-                    <div class="quick_links">
-                        <a href="./index.html#aboutUs"></a>
-                        <p>Business Ethics</p>
-                        <p>Our Values</p>
-                        <p>Partners</p>
-                        <p>Certificates</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 footer_item">
-                    <p class="footer_header">
-                        Services
-                    </p>
-                    <div class="services_links">
-                        <p>Spare parts</p>
-                        <p>Exchange</p>
-                        <p>AOG</p>
-                        <p>Repair Management</p>
 
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 footer_item">
-                    <p class="footer_header">
-                        Contact us
-                    </p>
-                    <div class="contact_links">
-                        <a href="#footer">
-                            <p>Contact with Us</p>
-                        </a>
-                        <a href="./contact.html">
-                            <p>Request a quote</p>
-                        </a>
+                <div class="col-12 col-sm-12 col-md-8">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-12 col-sm-12 footer_item">
+                            <p class="footer_header">
+                                Quick links
+                            </p>
+                            <div class="quick_links">
+                                <a href="./index.html#aboutUs">
+                                    <p>About us</p>
+                                </a>
+                                <p>Business Ethics</p>
+                                <p>Our Values</p>
+                                <p>Partners</p>
+                                <a href="./certificates.html">
+                                    <p>Certificates</p>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-12 col-sm-12 footer_item">
+                            <p class="footer_header">
+                                Services
+                            </p>
+                            <div class="services_links">
+                                <p>Spare parts</p>
+                                <p>Exchange</p>
+                                <p>AOG</p>
+                                <p>Repair Management</p>
 
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 footer_item footer_logo__mobile">
-                    <img src="./assets/images/footer_logo.svg" class="footer_logo" alt="">
-                    <p style="color: #1E1C20;
-                        font-size: 20px;
-                        font-family: Figtree;
-                        font-weight: 500;
-                        line-height: 32px;">We keep you up to date</p>
-                    <div class="email_input__wrapper___mobile">
-                        <input type="text" placeholder="Your email address" class="email_input">
-                        <img src="./assets//images/email_icon.svg" class="email_icon" alt="">
-                    </div>
-                    <div class="social_meadia__wrapper___mobile">
-                        <p style="color: #262626;
-                            font-size: 16px;
-                            font-family: Roboto;
-                            font-weight: 500;
-                            line-height: 24px;">Stay connected</p>
-                        <div class="social_media__icons">
-                            <img src="./assets/images/linkedin_icon.svg" alt="">
-                            <img src="./assets/images/mail_icon.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-12 col-sm-12 footer_item">
+                            <p class="footer_header">
+                                Contact us
+                            </p>
+                            <div class="contact_links">
+                                <a href="#footer">
+                                    <p>Contact with Us</p>
+                                </a>
+                                <a href="./contact.html">
+                                    <p>Request a quote</p>
+                                </a>
+
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-12 col-sm-12 footer_item footer_logo__mobile">
+                            <div style="display: flex; justify-content: center;">
+                                <img src="./assets/images/footer_logo.svg" class="footer_logo" alt="">
+                            </div>
+                            <p style="color: #1E1C20;
+                                                                            font-size: 20px;
+                                                                            font-family: Figtree;
+                                                                            font-weight: 500;
+                                                                            line-height: 32px;">We keep you up to date
+                            </p>
+                            <div class="email_input__wrapper___mobile">
+                                <input type="text" placeholder="Your email address" class="email_input">
+                                <img src="./assets//images/email_icon.svg" class="email_icon" alt="">
+                            </div>
+                            <div class="social_meadia__wrapper___mobile">
+                                <p style="color: #262626;
+                                                                                font-size: 16px;
+                                                                                font-family: Roboto;
+                                                                                font-weight: 500;
+                                                                                line-height: 24px;">Stay connected</p>
+                                <div class="social_media__icons">
+                                    <img src="./assets/images/linkedin_icon.svg" alt="">
+                                    <img src="./assets/images/mail_icon.svg" alt="">
+                                </div>
+                            </div>
+                            <p class="copyrights">© 2024 Horizons Mechanic. All right reserved</p>
+                            <div class="social_meadia__wrapper">
+                                <p style="color: #262626;
+                                                                                font-size: 16px;
+                                                                                font-family: Roboto;
+                                                                                font-weight: 500;
+                                                                                line-height: 24px;">Stay connected</p>
+                                <div class="social_media__icons">
+                                    <img src="./assets/images/linkedin_icon.svg" alt="">
+                                    <img src="./assets/images/mail_icon.svg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-5 col-md-5 col-sm-5 mt-4 footer_item">
+                            <p class="footer_header interested">
+                                Interested in trading with us?
+                            </p>
+                            <p class="mailto">sales@horizonmechanics.com</p>
+                            <div class="contact_wrapper">
+                                <div>
+                                    <p class="contact_item__header">Phone numbers</p>
+                                    <p class="phone_number">(+971)45 613 6000</p>
+                                    <p class="phone_number">(+971)51 233 0032</p>
+                                </div>
+                                <div>
+                                    <p class="contact_item__header">Address</p>
+                                    <p class="address">Business Center1. M Floor. MeydanFZ <br>
+                                        NadAl Sheba, P.O. Box 9305, Dubai, UAE</p>
+
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <p class="copyrights">© 2024 Horizons Mechanic. All right reserved</p>
-                    <div class="social_meadia__wrapper">
-                        <p style="color: #262626;
-                            font-size: 16px;
-                            font-family: Roboto;
-                            font-weight: 500;
-                            line-height: 24px;">Stay connected</p>
-                        <div class="social_media__icons">
-                            <img src="./assets/images/linkedin_icon.svg" alt="">
-                            <img src="./assets/images/mail_icon.svg" alt="">
-                        </div>
-                    </div>
                 </div>
+
             </div>
         </div>
     </section>
