homepage partners section

--- a/src/index.html
+++ b/src/index.html
@@ -510,9 +510,28 @@
                         <img class="swiper-slide supplier_img" src="./assets/images/partners6.svg" alt="">
                         <img class="swiper-slide supplier_img" src="./assets/images/partners7.svg" alt="">
                         <img class="swiper-slide supplier_img" src="./assets/images/partners8.svg" alt="">
+                        <img class="swiper-slide supplier_img" src="./assets/images/partners9.svg" alt=""><img
+                            class="swiper-slide supplier_img" src="./assets/images/partners10.svg" alt="">
                         <!-- <img class="swiper-slide" src="./assets/images/partners.svg" alt="">
                         <img class="swiper-slide" src="./assets/images/partners.svg" alt="">
                         <img class="swiper-slide" src="./assets/images/partners.svg" alt=""> -->
+                    </div>
+                </div>
+                <div class="col-12 suppliers_mobile">
+                    <div class="">
+                        <img class="supplier_img" src="./assets/images/partners_light.svg" alt="">
+                        <img class="supplier_img" src="./assets/images/partners2.svg" alt="">
+                        <img class="supplier_img" src="./assets/images/partners3.svg" alt="">
+                        <img class="supplier_img" src="./assets/images/partners4.svg" alt="">
+                        <img class="supplier_img" src="./assets/images/partners5.svg" alt="">
+                        <img class="supplier_img" src="./assets/images/partners6.svg" alt="">
+                        <img class="supplier_img" src="./assets/images/partners7.svg" alt="">
+                        <img class="supplier_img" src="./assets/images/partners8.svg" alt="">
+                        <img class="supplier_img" src="./assets/images/partners9.svg" alt=""><img class="supplier_img"
+                            src="./assets/images/partners10.svg" alt="">
+                        <!-- <img class="swiper-slide" src="./assets/images/partners.svg" alt="">
+                                        <img class="swiper-slide" src="./assets/images/partners.svg" alt="">
+                                        <img class="swiper-slide" src="./assets/images/partners.svg" alt=""> -->
                     </div>
                 </div>
             </div>
